환경변수 적용

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 VITE_APP_NAME=Loopin
-VITE_APP_TITLE=Loopin
+VITE_APP_TITLE=Loopin (DEV MODE)
 VITE_LOG_LEVEL=info
 VITE_API_BASE_URL=http://localhost:8080
 
