--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "loopin-app",
+  "name": "loopin-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "npm run type-check && vite build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@tanstack/react-query": "^5.90.3",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
